--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,3 @@
+# config/packages/twig.yaml
 twig:
-    file_name_pattern: '*.twig'
-
-when@test:
-    twig:
-        strict_variables: true
+    form_themes: ['bootstrap_5_layout.html.twig']
